--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         	height: 310px;
         }
 
-		 h1{
-          	font-size: 35px;
+	 h1{
+            font-size: 35px;
             font-weight: 400;
             margin-top: 0;
             margin-bottom: 20px;
@@ -83,12 +83,11 @@
 
     </style>
 </head>
-<body>
 
 <div class="full">
 
 	<div class="img">
-		<img src="https://cdn.discordapp.com/attachments/1214464051296342039/1233770830333345964/Untitled67_20240427212417.png?ex=662e4e20&is=662cfca0&hm=1cdde08db306a09a9d4a3ae712db5468b1fb081c57d5ef5183aeeed95196d5ac&">
+		<img src="tamtam.png">
 	</div>
 
     <div class="main">
